--- a/SalesApp/SalesApp/Web.config
+++ b/SalesApp/SalesApp/Web.config
@@ -11,11 +11,17 @@
   </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
-    <sessionState timeout="2880"></sessionState>
+
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="8880" />
     </authentication>
+
+    <sessionState mode="InProc"
+  stateConnectionString="tcpip=5.10.80.108,780"
+  sqlConnectionString="data source=5.10.80.108,780;Trusted_Connection=yes"
+  cookieless="false"
+  timeout="50" ></sessionState>
+    
   </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -72,11 +78,10 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SalesApp-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=5.10.80.108,780;Initial Catalog=Galadventure_User;user=Galadventure_User;password=Galadventure2017" providerName="System.Data.SqlClient" />
     <add name="Galadventure_Entities" connectionString="Server=5.10.80.108,780;initial catalog=Galadventure_Trabajos;persist security info=True;user id=Galadventure_Trabajos;password=Trabajos2017;application name=Galadventure" providerName="System.Data.SqlClient" />
-    <add name="GaladventureTrabajosEntities" connectionString="metadata=res://*/Models.ModelDB.csdl|res://*/Models.ModelDB.ssdl|res://*/Models.ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=5.10.80.108,780;initial catalog=Galadventure_Trabajos;persist security info=True;user id=Galadventure_Trabajos;password=Trabajos2017;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Galadventure_TrabajosEntities" connectionString="metadata=res://*/Models.ModelDB.csdl|res://*/Models.ModelDB.ssdl|res://*/Models.ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=5.10.80.108,780;initial catalog=Galadventure_Trabajos;persist security info=True;user id=Galadventure_Trabajos;password=Trabajos2017;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="GaladventureTrabajosEntities" connectionString="metadata=res://*/Models.ModelDB.csdl|res://*/Models.ModelDB.ssdl|res://*/Models.ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=5.10.80.108,780;initial catalog=Galadventure_Trabajos;persist security info=True;user id=Galadventure_Trabajos;password=Trabajos2017;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Galadventure_TrabajosEntities" connectionString="metadata=res://*/Models.ModelDB.csdl|res://*/Models.ModelDB.ssdl|res://*/Models.ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=5.10.80.108,780;initial catalog=Galadventure_Trabajos;persist security info=True;user id=Galadventure_Trabajos;password=Trabajos2017;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="owin:AppStartup" value="SalesApp.Startup,SalesApp" />
